# led-strip-server

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  defines.h  file.cpp  file.h  http.cpp  http.h  main.cpp  server.cpp  server.h  test.txt
config/: serverConfig.json  websiteConfig.json
files/: test.json
src/: File.cpp  File.h  defines.h  file.cpp  file.h  http.cpp  http.h  main.cpp  server.cpp  server.h
src/communication/: File.cpp  File.h  Http.cpp  Http.h  Mqtt.cpp  Mqtt.h  Server.cpp  Server.h  file.cpp  file.h  http.cpp  http.h  server.cpp  server.h
src/file_control/: File.cpp  File.h
src/gpio_control/: Gpio.cpp  Gpio.h  gpio.cpp  gpio.h
src/led_strip_control/: Color.cpp  Color.h  Data.cpp  Data.h  Mode.cpp  Mode.h  color.cpp  color.h  data.cpp  data.h  mode.cpp  mode.h
src/settings/: Settings.cpp  Settings.h
static/: index.html
